# AnkiForMusicLearning

./: .gitignore  README.md  anki_connect.py  deck.py  deck_information.py  globals.py  init.py  interface.py  main.py  requirements.txt  settings_backup.txt  setup.cfg  setup.py  song_archive.py  templates.py
archiv/: anki_connect.py  classes.py  deck.py  globals.py  init.py  interface.py  main.py  settings.py  templates.py
git_old/: COMMIT_EDITMSG  HEAD  ORIG_HEAD  config  index  index 2  index 3  index 4  index 5  index 6  index 7  packed-refs
git_old/logs/: HEAD
git_old/logs/refs/: stash
git_old/logs/refs/heads/: complete-overhall  main  refactoring  v0.5.1
git_old/logs/refs/remotes/origin/: HEAD  HEAD 2  complete-overhall  main  refactoring  v0.5.1
git_old/objects/pack/: pack-cd69e09f2c2f78d03261ca8c79c7bce868aec648 2.idx  pack-cd69e09f2c2f78d03261ca8c79c7bce868aec648.pack
git_old/refs/: stash
git_old/refs/heads/: main 2  refactoring
git_old/refs/remotes/origin/: complete-overhall  main  refactoring  v0.5.1
src/: anki_connect.py  constants.py  deck.py  deck_creation_data.json  helpers.py  interface.json  main.py  settings.json
src/anki_connect/: anki_connect.py  planning.md
src/anki_script.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/app/: anki_connect.py
src/unit_tests/: test_anki_connect.py  test_helpers.py
unit_tests/: test_anki_connect.py
v5/: anki_connect_v5.py  init_v5.py  interface_v5.py  templates_v5.py
