[metadata]
name = anki_script
description = script to help learning music with Anki
author = Johannes Obenaus
platforms = unix, linux, osx, cygwin, win32
classifires = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: Only
    Programming Language :: Python :: 3.10

[options]
packages = 
    anki_script
install_requires = 
    beautifulsoup4==4.11.1
    bs4==0.0.1
    certifi==2021.10.8
charset-normalizer==2.0.12
idna==3.3
requests==2.27.1
soupsieve==2.3.2.post1
tqdm==4.64.0
urllib3==1.26.9
python_requires = >= 3.10
package_dir = 
    = src
zip_safe = no
